--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -20,7 +20,7 @@
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="left hide-on-med-and-down">
               <% if !logged_in? %>
-              <li><%= link_to "Enroll", href="/students/new" %></li>
+              <li><%= link_to "Sign Up", href="/students/new" %></li>
               <% end %>
               <li><%= link_to "Courses", root_path %></li>
               <% if logged_in? %>
